--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section class="featured-course" id="courses">
             <h3 class="text-center">Featured Courses</h3>
             <hr class="mb-5 mt-3">
-            <div class="d-md-flex mt-3">
+            <div class="d-md-flex justify-content-center mt-3">
 
                 <div class="cols d-flex flex-md-column justify-content-between d-md-column text-md-center p-3 mx-1">
                     <div>
@@ -88,9 +88,10 @@
                                 fill="#DE4C36" /></svg>
                     </div>
 
-                    <div class=" ">
-                        <h5 class=" mr-5 text-right space">Git</h5>
+                    <div class="mr-md-5 mt-1 w-100">
+                        <h5 class=" mr-5 mr-md-0 text-md-center text-right space">Git</h5>
                     </div>
+
                     <p class="course-info">Git is a powerful tool for software development it is used for version
                         controling projects and
                         tracking. </p>
@@ -280,12 +281,13 @@
                                 fill="url(#IconifyId-1754acb3b5d-64d25d-96)" />
                         </svg></div>
 
-                    <div class=" ">
-                        <h5 class="mr-5 space text-right">Ruby</h5>
+                    <div class="mr-md-5 mt-1 w-100">
+                        <h5 class=" mr-5 mr-md-0 text-md-center text-right space">Ruby</h5>
                     </div>
 
-                    <p class="course-info">When you think of where to from, start from Ruby, its simple and straight to
-                        the point </p>
+                    <p class="course-info">
+                        When you think of where to from, start from Ruby, its simple and straight to the point
+                    </p>
                 </div>
                 <div class="cols d-flex flex-md-column justify-content-between text-md-center p-3 mx-1">
                     <div>
@@ -311,8 +313,9 @@
                             <path
                                 d="M202.127 188.636l5.765-64.641H127.89v31.937h45.002l-2.906 32.704H127.89v31.937h39.327l-3.708 41.42l-35.62 9.614v33.226l65.473-18.145l.48-5.396l7.506-84.08l.779-8.576z"
                                 fill="#FFF" /></svg></div>
-                    <div class="  text-right">
-                        <h5 class="mr-5 space">Css</h5>
+
+                    <div class="mr-md-5 mt-1 w-100">
+                        <h5 class=" mr-5 mr-md-0 text-md-center text-right space">Css</h5>
                     </div>
 
                     <p class="course-info">Css stand for Cascading stylesheet, just as its name implies, its main
@@ -347,10 +350,9 @@
                                 fill="#FFF" />
                             <path d="M127.89 155.854v.078h77.143l.64-7.178l1.456-16.191l.763-8.568H127.89v31.86z"
                                 fill="#FFF" /></svg></div>
-                    <div class="  text-right">
-                        <h5 class="mx-md-auto mr-5 space">
-                            HTML
-                        </h5>
+
+                    <div class="mr-md-5 mt-1 w-100">
+                        <h5 class=" mr-5 mr-md-0 text-md-center text-right space">HTML</h5>
                     </div>
 
                     <p class="course-info">HTML stands for hypertext markup language, used for structuring the web page
@@ -368,8 +370,8 @@
                                     d="M12 11v8c0 .876-.523 2-2 2c-2.385 0-2.5-2-2.5-2m13.29-5.484c-.6-1.01-1.396-1.516-2.386-1.516C16.856 12 16 13 16 14s.5 2 2.508 2.5c1.278.318 2.492 1 2.492 2.5s-1.315 2-2.5 2c-1.514 0-2.514-.667-3-2" />
                             </g>
                         </svg></div>
-                    <div class="text-sm-center  text-right">
-                        <h5 class="mr-5  space">Js</h5>
+                    <div class="mr-md-5 mt-1 w-100">
+                        <h5 class=" mr-5 mr-md-0 text-md-center text-right space">JS</h5>
                     </div>
 
                     <p class="course-info">if the a user must interact with the your web app, then you learn Javascript,
@@ -379,7 +381,7 @@
                 </div>
 
             </div>
-            </div>
+
             <h4 class="text-center w-100 pt-5 text-white"><a href="#" class="text-white view-all-course">View all
                 </a>
             </h4>
@@ -387,11 +389,11 @@
 
         <!-- Featured tutors -->
 
-        <section class="tutors mt-5" id="tutors">
+        <section class="tutors mt-5 wrapper" id="tutors">
             <h4 class="text-center font-weight-bold">Featured Tutors</h4>
             <hr class="my-3">
-            <div class="d-md-flex m-2 border">
-                <div class="d-flex bg-light p-0 m-0 border mt-2">
+            <div class="d-md-flex m-2">
+                <div class="d-flex bg-light p-0 m-0 mt-2">
                     <div class="col-4 col-md-4"><img src="assets/images/oie_21142855cgLZ73on.jpg" alt="tutor 6 John">
                     </div>
                     <div class="col-8 col-md-8">
@@ -401,10 +403,11 @@
                             John is a seasoned software developer with
                             10 years of industry experience and he is an insturctor here at Uchenna Tut.
                         </p>
+
                     </div>
                 </div>
 
-                <div class="d-flex bg-light p-0 col-md-6 m-0 border mt-2">
+                <div class="d-flex bg-light p-0 col-md-6 m-0 mt-2">
                     <div class="col-4 col-md-4"><img src="assets/images/tutor1.jpg" alt="tutor 1 Kelvin"></div>
                     <div class="col-8 col-md-8">
                         <h6>Kelvin</h6>
@@ -416,12 +419,12 @@
                     </div>
                 </div>
             </div>
-            <div class="d-md-flex m-2 border">
+            <div class="d-md-flex m-2">
 
 
-                <div class="d-flex bg-light col-md-6 p-0 m-0 border mt-2">
+                <div class="d-flex bg-light col-md-6 p-0 m-0 mt-2">
                     <div class="col-4 col-md-4">
-                        <img src="assets/images/tutor8.jpg" alt="tuto 2 Oliver">
+                        <img src="assets/images/tutor7.jpg" alt="tuto 2 Oliver">
                     </div>
                     <div class="col-8 col-md-8">
 
@@ -434,7 +437,7 @@
                     </div>
                 </div>
 
-                <div class="d-flex p-0 bg-light col-md-6 m-0 border mt-2">
+                <div class="d-flex p-0 bg-light col-md-6 m-0 mt-2">
 
                     <div class="col-4 col-md-4">
                         <img src="assets/images/tutor_onez.jpg" alt="Tuto 3 Onez">
@@ -452,8 +455,8 @@
                 </div>
             </div>
 
-            <div class="d-md-flex m-2 border">
-                <div class="d-flex p-0 bg-light col-md-6 m-0 border mt-2">
+            <div class="d-md-flex m-2">
+                <div class="d-flex p-0 bg-light col-md-6 m-0 mt-2">
                     <div class="col-4 col-md-4"><img src="assets/images/tutor6.jpg" alt="tutor 4 Mike"></div>
                     <div class="col-8 col-md-8">
                         <h6>Mike</h6>
@@ -466,7 +469,7 @@
                     </div>
                 </div>
 
-                <div class="d-flex word-wrap col-md-6 bg-light border mt-2">
+                <div class="d-flex word-wrap col-md-6 bg-light mt-2">
 
                     <div class="col-4 col-md-4"><img src="assets/images/adams.jpg" alt="tutor 5 Adams"></div>
                     <div class="col-8 col-md-8">
@@ -494,6 +497,7 @@
                         <img src="assets/images/google.png" alt="google">
                     </figure>
                 </a>
+
                 <a href="#" class="">
                     <figure>
                         <img src="assets/images/mozilla.png" alt="mozilla">
