Update the style file

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </nav>
             </div>
 
-            <div class=""><button class="btn btn-outline-danger rounded-0 text-danger">Start</button></div>
+            <div class=""><a href="tickets.html" class="btn btn-outline-danger rounded-0 text-danger">Start</a></div>
         </div>
     </header>
 
@@ -75,10 +75,10 @@
         <section class="featured-course" id="courses">
             <h3 class="text-center">Featured Courses</h3>
             <hr class="mb-5 mt-3">
-            <div class="d-md-flex justify-content-center mt-3">
+            <div class="d-md-flex justify-content-center mt-3 wrapper">
 
                 <div class="cols d-flex flex-md-column justify-content-between d-md-column text-md-center p-3 mx-1">
-                    <div>
+                    <div class="mr-0">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                             aria-hidden="true" focusable="false" width="2em" height="2em"
                             style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);"
@@ -88,7 +88,7 @@
                                 fill="#DE4C36" /></svg>
                     </div>
 
-                    <div class="mr-md-5 mt-1 w-100">
+                    <div class="mr-md-5 mt-1 mr-0 pr-0 w">
                         <h5 class=" mr-5 mr-md-0 text-md-center text-right space">Git</h5>
                     </div>
 
@@ -281,7 +281,7 @@
                                 fill="url(#IconifyId-1754acb3b5d-64d25d-96)" />
                         </svg></div>
 
-                    <div class="mr-md-5 mt-1 w-100">
+                    <div class="mr-md-5 mt-1 w">
                         <h5 class=" mr-5 mr-md-0 text-md-center text-right space">Ruby</h5>
                     </div>
 
@@ -314,7 +314,7 @@
                                 d="M202.127 188.636l5.765-64.641H127.89v31.937h45.002l-2.906 32.704H127.89v31.937h39.327l-3.708 41.42l-35.62 9.614v33.226l65.473-18.145l.48-5.396l7.506-84.08l.779-8.576z"
                                 fill="#FFF" /></svg></div>
 
-                    <div class="mr-md-5 mt-1 w-100">
+                    <div class="mr-md-5 mt-1 w">
                         <h5 class=" mr-5 mr-md-0 text-md-center text-right space">Css</h5>
                     </div>
 
@@ -351,7 +351,7 @@
                             <path d="M127.89 155.854v.078h77.143l.64-7.178l1.456-16.191l.763-8.568H127.89v31.86z"
                                 fill="#FFF" /></svg></div>
 
-                    <div class="mr-md-5 mt-1 w-100">
+                    <div class="mr-md-5 mt-1 w">
                         <h5 class=" mr-5 mr-md-0 text-md-center text-right space">HTML</h5>
                     </div>
 
@@ -370,7 +370,7 @@
                                     d="M12 11v8c0 .876-.523 2-2 2c-2.385 0-2.5-2-2.5-2m13.29-5.484c-.6-1.01-1.396-1.516-2.386-1.516C16.856 12 16 13 16 14s.5 2 2.508 2.5c1.278.318 2.492 1 2.492 2.5s-1.315 2-2.5 2c-1.514 0-2.514-.667-3-2" />
                             </g>
                         </svg></div>
-                    <div class="mr-md-5 mt-1 w-100">
+                    <div class="mr-md-5 mt-1 w">
                         <h5 class=" mr-5 mr-md-0 text-md-center text-right space">JS</h5>
                     </div>
 
@@ -390,14 +390,14 @@
         <!-- Featured tutors -->
 
         <section class="tutors mt-5 wrapper" id="tutors">
-            <h4 class="text-center font-weight-bold">Featured Tutors</h4>
+            <h4 class="text-center font-weight-bold mt-md-5">Featured Tutors</h4>
             <hr class="my-3">
             <div class="d-md-flex m-2">
                 <div class="d-flex bg-light p-0 m-0 mt-2">
                     <div class="col-4 col-md-4"><img src="assets/images/oie_21142855cgLZ73on.jpg" alt="tutor 6 John">
                     </div>
                     <div class="col-8 col-md-8">
-                        <h6>John </h6>
+                        <h5 class="font-weight-bolder">John </h5>
                         <small>Head of student affairs at Uchenna Tut</small>
                         <p>
                             John is a seasoned software developer with
@@ -410,7 +410,7 @@
                 <div class="d-flex bg-light p-0 col-md-6 m-0 mt-2">
                     <div class="col-4 col-md-4"><img src="assets/images/tutor1.jpg" alt="tutor 1 Kelvin"></div>
                     <div class="col-8 col-md-8">
-                        <h6>Kelvin</h6>
+                        <h5 class="font-weight-bolder">Kelvin</h5>
                         <small>Head of Student success at Uchenna Tut</small>
                         <p>
                             Kelvin is a seasoned instuctor with 5 years teach and industry experience, he has worked
@@ -428,7 +428,7 @@
                     </div>
                     <div class="col-8 col-md-8">
 
-                        <h6>Oliver</h6>
+                        <h5 class="font-weight-bolder">Oliver</h5>
                         <small>Web Developer, Digital marketer</small>
                         <p>
                             As an industralist and an experience
@@ -443,7 +443,7 @@
                         <img src="assets/images/tutor_onez.jpg" alt="Tuto 3 Onez">
                     </div>
                     <div class="col-8 col-md-8">
-                        <h6>Onez </h6>
+                        <h5 class="font-weight-bolder">Onez </h5>
                         <small>Admissions at Uchenna Tut</small>
                         <p>
                             Onez is one ofthe intructors we value here at
@@ -459,7 +459,7 @@
                 <div class="d-flex p-0 bg-light col-md-6 m-0 mt-2">
                     <div class="col-4 col-md-4"><img src="assets/images/tutor6.jpg" alt="tutor 4 Mike"></div>
                     <div class="col-8 col-md-8">
-                        <h6>Mike</h6>
+                        <h5 class="font-weight-bolder">Mike</h5>
                         <small>Admission Officer at Uchenna Tut</small>
                         <p>
                             Mike is Prof when it comes to tech and
@@ -473,7 +473,7 @@
 
                     <div class="col-4 col-md-4"><img src="assets/images/adams.jpg" alt="tutor 5 Adams"></div>
                     <div class="col-8 col-md-8">
-                        <h6>Adams</h6>
+                        <h5 class="font-weight-bolder">Adams</h5>
                         <small>Exams and record at Uchenna Tut</small>
                         <p>
                             Adams the Pro as we call him at Uchenna Tut
@@ -485,8 +485,8 @@
 
         </section>
 
-        <section class="bg-dark client-item clients-section-wrapper">
-            <h4 class="text-light text-center pt-5">
+        <section class="bg-dark client-item clients-section-wrapper mt-md-5">
+            <h4 class="text-light text-center pt-5" id="clients">
                 Clients
             </h4>
             <hr class="my-2">
