--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="d-md-flex justify-content-center mt-3 wrapper">
 
                 <div class="cols d-flex flex-md-column justify-content-between d-md-column text-md-center p-3 mx-1">
-                    <div class="mr-0">
+                    <div class="m-0 ">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                             aria-hidden="true" focusable="false" width="2em" height="2em"
                             style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);"
@@ -88,14 +88,14 @@
                                 fill="#DE4C36" /></svg>
                     </div>
 
-                    <div class="mr-md-5 mt-1 mr-0 pr-0 w">
+                    <div class="mt-1 w">
                         <h5 class=" mr-5 mr-md-0 text-md-center text-right space">Git</h5>
                     </div>
 
-                    <p class="course-info">Git is a powerful tool for software development it is used for version
-                        controling projects and
+                    <p>Git is a powerful tool for software development it is used for version controling projects and
                         tracking. </p>
                 </div>
+
                 <div class="cols d-flex flex-md-column justify-content-between text-md-center p-3 mx-1">
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -351,11 +351,12 @@
                             <path d="M127.89 155.854v.078h77.143l.64-7.178l1.456-16.191l.763-8.568H127.89v31.86z"
                                 fill="#FFF" /></svg></div>
 
-                    <div class="mr-md-5 mt-1 w">
+                    <div class="mr-md-5 w">
                         <h5 class=" mr-5 mr-md-0 text-md-center text-right space">HTML</h5>
                     </div>
 
-                    <p class="course-info">HTML stands for hypertext markup language, used for structuring the web page
+                    <p class="course-info mt-md-n5">HTML stands for hypertext markup language, used for structuring the
+                        web page
                     </p>
                 </div>
                 <div class="cols d-flex flex-md-column justify-content-between text-md-center p-3 mx-1">
@@ -375,14 +376,13 @@
                     </div>
 
                     <p class="course-info">if the a user must interact with the your web app, then you learn Javascript,
-                        this is why it
-                        is
-                        called language of the web </p>
+                        this is why it is called language of the web </p>
                 </div>
 
             </div>
 
-            <h4 class="text-center w-100 pt-5 text-white"><a href="#" class="text-white view-all-course">View all
+            <h4 class="text-center w-100 py-5 text-white"><a href="#"
+                    class="btn btn-danger text-white rounded-0 font-weight-bolder p-3">View all Courses
                 </a>
             </h4>
         </section>
@@ -446,10 +446,8 @@
                         <h5 class="font-weight-bolder">Onez </h5>
                         <small>Admissions at Uchenna Tut</small>
                         <p>
-                            Onez is one ofthe intructors we value here at
-                            Uchenna Tuts he has won so many awards in the industry and have head a lot of department in
-                            Uchenna
-                            Tut
+                            Onez is one ofthe intructors we value here at Uchenna Tuts he has won so many awards in the
+                            industry and have head a lot of department in Uchenna Tut
                         </p>
                     </div>
                 </div>
