add js file and ticket.html

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                         <li><a href="index.html#courses" class="mx-3">Courses</a></li>
                         <li><a href="index.html#tutors" class="mx-3">Tutors</a></li>
                         <li><a href="index.html#clients" class="mx-3">Clients</a></li>
-                        <li><a href="about.html" class="mx-3">About</a></li>
+                        <li><a href="about.html" class="mx-3 active">About</a></li>
                     </ul>
                 </nav>
             </div>
@@ -56,42 +56,48 @@
         </div>
     </header>
 
-    <div>
-        <div class="abt-hero ">
-            <h3 class="font-weight-bold text-danger p-0"> "Your learning starts here" </h3>
-            <h1 class="display-4 text-truncate font-weight-bolder text-danger p-0">Uchenna Tutorials</h1>
-            <div class="abt-description p-2 bg-light">
-                <p>Uchenna online tutorial, is your one stop platfofrm for every tech and sciences. This is where
-                    your career start as a professional or beginer, checkout our latest courses. </p>
-            </div>
-            <p class="mt-5">Please contact us for any further information about Global Art Exhibition 2020.
-                <br> info@uchenna-tut.edu</p>
-
+    <div class="abt-hero">
+        <h3 class="font-weight-bold text-danger p-0"> "Your learning starts here" </h3>
+        <h1 class="display-4 text-truncate font-weight-bolder text-danger p-0">Uchenna Tutorials</h1>
+        <div class="col-12 abt-description p-2 bg-light">
+            <p>Uchenna online tutorial, is your one stop platfofrm for every tech and sciences. This is where
+                your career start as a professional or beginer, checkout our latest courses. </p>
         </div>
+        <p class="mt-5">Please contact us for any further information about Our Plans and other enquiry
+            <br> info@uchenna-tut.edu</p>
+
     </div>
 
     <main>
         <section class="abt py-5">
 
             <h3>Uchenna Tutorials official logo</h3>
-            <p>Please contact us for any further information about Global Art Exhibition 2020.
-                art-exhibition-2020@example.org</p>
+            <hr class="my-3">
+            <p class="w-50 mx-auto">Please contact us for any further information about Our Plans.
+                <br> info@uchenna-tut.edu</p>
 
-            <div class="border p-5 mx-auto my-5 w-25">
+            <div class="border p-1 p-md-5 mx-auto my-5 w-25">
                 <a href="index.html"><img src="assets/images/logo2.png" alt="Logo"></a>
             </div>
 
         </section>
 
-        <section class="abt py-5 bg-light">
+        <section class="abt py-5 px-3 bg-light">
+
             <h3 class="pb-3">See our community project at Uchenna Tutorials</h3>
             <hr>
-            <p class="py-3">We care about the community where we find iur self, and do our best to contribute to its
+            <p class="py-3 px-5">We care about the community where we find iur self, and do our best to contribute to
+                its
                 growth and well
                 being</p>
-            <div class="col-12 col-md-3"><img src="assets/images/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg" alt="project"
-                    class="projects"></div>
-            <div class="col-12 col-md-3"><img src="assets/images/abt-img.jpg" alt="project" class="projects"></div>
+            <div class="row m-0">
+                <div class="col-12 col-md-3 offset-md-3 project2 text-white mr-md-2">
+                    <h3>2018 School outreach</h3>
+                </div>
+                <div class="col-12 mt-3 mt-md-0 col-md-3 project1 text-white ml-md-2">
+                    <h3>2019 free course</h3>
+                </div>
+            </div>
 
         </section>
     </main>
