--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="d-none d-md-inline ">
                 <nav>
                     <ul class="nav navbar">
-                        <li><a href="#" class="mx-3">Home</a></li>
-                        <li><a href="#courses" class="mx-3">Courses</a></li>
-                        <li><a href="#tutors" class="mx-3">Tutors</a></li>
-                        <li><a href="#clients" class="mx-3">Clients</a></li>
-                        <li><a href="about.html" class="mx-3">About</a></li>
+                        <li><a href="#" class="mx-3 active links">Home</a></li>
+                        <li><a href="#courses" class="mx-3 links">Courses</a></li>
+                        <li><a href="#tutors" class="mx-3 links">Tutors</a></li>
+                        <li><a href="#clients" class="mx-3 links">Clients</a></li>
+                        <li><a href="about.html" class="mx-3 links">About</a></li>
                     </ul>
                 </nav>
             </div>
@@ -56,10 +56,10 @@
     </header>
 
     <div>
-        <div class="hero ">
+        <div class="hero">
             <h3 class="font-weight-bold text-danger p-0"> "Your learning starts here" </h3>
-            <h1 class="display-4 text-truncate font-weight-bolder text-danger p-0">Uchenna Tutorials</h1>
-            <div class="description p-2 bg-light">
+            <h1 class="display-4 text-truncate font-weight-bolder text-danger p-0 wow zoomIn">Uchenna Tutorials</h1>
+            <div class="description p-2 bg-light wow zoomIn">
                 <p>Uchenna online tutorial, is your one stop platfofrm for every tech and sciences. This is where
                     your career start as a professional or beginer, checkout our latest courses. </p>
             </div>
@@ -77,7 +77,7 @@
             <hr class="mb-5 mt-3">
             <div class="d-md-flex justify-content-center mt-3 wrapper">
 
-                <div class="cols d-flex flex-md-column justify-content-between d-md-column text-md-center p-3 mx-1">
+                <div class="cols d-flex flex-md-column justify-content-between d-md-column text-md-center p-3 mx-1 wow zoomIn">
                     <div class="m-0 ">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                             aria-hidden="true" focusable="false" width="2em" height="2em"
@@ -96,7 +96,7 @@
                         tracking. </p>
                 </div>
 
-                <div class="cols d-flex flex-md-column justify-content-between text-md-center p-3 mx-1">
+                <div class="cols d-flex flex-md-column justify-content-between text-md-center p-3 mx-1 wow zoomIn">
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                             aria-hidden="true" focusable="false" width="2em" height="2em"
@@ -289,7 +289,7 @@
                         When you think of where to from, start from Ruby, its simple and straight to the point
                     </p>
                 </div>
-                <div class="cols d-flex flex-md-column justify-content-between text-md-center p-3 mx-1">
+                <div class="cols d-flex flex-md-column justify-content-between text-md-center p-3 mx-1 wow zoomIn">
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                             aria-hidden="true" focusable="false" width="2em" height="2em"
@@ -322,7 +322,7 @@
                         purpose is styling the web
                         page</p>
                 </div>
-                <div class="cols d-flex flex-md-column justify-content-between text-md-center p-3 mx-1">
+                <div class="cols d-flex flex-md-column justify-content-between text-md-center p-3 mx-1 wow zoomIn">
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                             aria-hidden="true" focusable="false" width="2em" height="2em"
@@ -359,7 +359,7 @@
                         web page
                     </p>
                 </div>
-                <div class="cols d-flex flex-md-column justify-content-between text-md-center p-3 mx-1">
+                <div class="cols d-flex flex-md-column justify-content-between text-md-center p-3 mx-1 wow zoomIn">
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                             aria-hidden="true" focusable="false" width="2em" height="2em"
@@ -393,8 +393,9 @@
             <h4 class="text-center font-weight-bold mt-md-5">Featured Tutors</h4>
             <hr class="my-3">
             <div class="d-md-flex m-2">
-                <div class="d-flex bg-light p-0 m-0 mt-2">
-                    <div class="col-4 col-md-4"><img src="assets/images/oie_21142855cgLZ73on.jpg" alt="tutor 6 John">
+                <div class="d-flex bg-light p-0 m-0 mt-2 wow zoomIn">
+                    <div class="col-4 col-md-4 border tutors-img"><img src="assets/images/oie_21142855cgLZ73on.jpg"
+                            alt="tutor 6 John">
                     </div>
                     <div class="col-8 col-md-8">
                         <h5 class="font-weight-bolder">John </h5>
@@ -407,8 +408,9 @@
                     </div>
                 </div>
 
-                <div class="d-flex bg-light p-0 col-md-6 m-0 mt-2">
-                    <div class="col-4 col-md-4"><img src="assets/images/tutor1.jpg" alt="tutor 1 Kelvin"></div>
+                <div class="d-flex bg-light p-0 col-md-6 m-0 mt-2 wow zoomIn">
+                    <div class="col-4 col-md-4 border tutors-img"><img src="assets/images/tutor1.jpg" alt="tutor 1 Kelvin">
+                    </div>
                     <div class="col-8 col-md-8">
                         <h5 class="font-weight-bolder">Kelvin</h5>
                         <small>Head of Student success at Uchenna Tut</small>
@@ -422,8 +424,8 @@
             <div class="d-md-flex m-2">
 
 
-                <div class="d-flex bg-light col-md-6 p-0 m-0 mt-2">
-                    <div class="col-4 col-md-4">
+                <div class="d-flex bg-light col-md-6 p-0 m-0 mt-2 wow zoomIn">
+                    <div class="col-4 col-md-4 border tutors-img">
                         <img src="assets/images/tutor7.jpg" alt="tuto 2 Oliver">
                     </div>
                     <div class="col-8 col-md-8">
@@ -437,9 +439,9 @@
                     </div>
                 </div>
 
-                <div class="d-flex p-0 bg-light col-md-6 m-0 mt-2">
+                <div class="d-flex p-0 bg-light col-md-6 m-0 mt-2 wow zoomIn">
 
-                    <div class="col-4 col-md-4">
+                    <div class="col-4 col-md-4 border tutors-img">
                         <img src="assets/images/tutor_onez.jpg" alt="Tuto 3 Onez">
                     </div>
                     <div class="col-8 col-md-8">
@@ -454,8 +456,8 @@
             </div>
 
             <div class="d-md-flex m-2">
-                <div class="d-flex p-0 bg-light col-md-6 m-0 mt-2">
-                    <div class="col-4 col-md-4"><img src="assets/images/tutor6.jpg" alt="tutor 4 Mike"></div>
+                <div class="d-flex p-0 bg-light col-md-6 m-0 mt-2 wow zoomIn">
+                    <div class="col-4 col-md-4 border tutors-img"><img src="assets/images/tutor6.jpg" alt="tutor 4 Mike"></div>
                     <div class="col-8 col-md-8">
                         <h5 class="font-weight-bolder">Mike</h5>
                         <small>Admission Officer at Uchenna Tut</small>
@@ -467,9 +469,9 @@
                     </div>
                 </div>
 
-                <div class="d-flex word-wrap col-md-6 bg-light mt-2">
+                <div class="d-flex word-wrap col-md-6 bg-light mt-2 wow zoomIn">
 
-                    <div class="col-4 col-md-4"><img src="assets/images/adams.jpg" alt="tutor 5 Adams"></div>
+                    <div class="col-4 col-md-4 border tutors-img"><img src="assets/images/adams.jpg" alt="tutor 5 Adams"></div>
                     <div class="col-8 col-md-8">
                         <h5 class="font-weight-bolder">Adams</h5>
                         <small>Exams and record at Uchenna Tut</small>
@@ -490,31 +492,31 @@
             <hr class="my-2">
             <div class="client-section">
 
-                <a href="#" class="">
+                <a href="#" class="wow zoomIn">
                     <figure>
                         <img src="assets/images/google.png" alt="google">
                     </figure>
                 </a>
 
-                <a href="#" class="">
+                <a href="#" class="wow zoomIn">
                     <figure>
                         <img src="assets/images/mozilla.png" alt="mozilla">
                     </figure>
                 </a>
 
-                <a href="#" class="">
+                <a href="#" class="wow zoomIn">
                     <figure>
                         <img src="assets/images/microsoft.png" class="clients-link" alt="microsoft">
                     </figure>
                 </a>
 
-                <a href="#" class="">
+                <a href="#" class="wow zoomIn">
                     <figure>
                         <img src="assets/images/twitter.png" class="" alt="twitter">
                     </figure>
                 </a>
 
-                <a href="#" class="">
+                <a href="#" class="wow zoomIn">
                     <figure>
                         <img src="assets/images/airbnb.png" alt="">
                     </figure>
@@ -524,6 +526,8 @@
         </section>
     </main>
     <script src="assets/js/js.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/wow.min.js"></script>
     <footer class="footer">
         <div class="col-md-2 text-truncate"><a href="#"><img src="assets/images/logo2.png" alt="Footer logo"></a></div>
         <div class="col-md-8 pt-4 ml-md-5 pl-md-5 ml-lg-3 pl-lg-0">
