Fix some adjustments in index page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
             <hr class="mb-5 mt-3">
             <div class="d-md-flex justify-content-center mt-3 wrapper">
 
-                <div class="cols d-flex flex-md-column justify-content-between d-md-column text-md-center p-3 mx-1 wow zoomIn">
+                <div
+                    class="cols d-flex flex-md-column justify-content-between d-md-column text-md-center p-3 mx-1 wow zoomIn">
                     <div class="m-0 ">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                             aria-hidden="true" focusable="false" width="2em" height="2em"
@@ -394,8 +395,10 @@
             <hr class="my-3">
             <div class="d-md-flex m-2">
                 <div class="d-flex bg-light p-0 m-0 mt-2 wow zoomIn">
-                    <div class="col-4 col-md-4 border tutors-img"><img src="assets/images/oie_21142855cgLZ73on.jpg"
-                            alt="tutor 6 John">
+                    <div class="col-4 col-md-4">
+                        <figure class="tutors-img">
+                            <img src="assets/images/oie_21142855cgLZ73on.jpg" alt="tutor 6 John">
+                        </figure>
                     </div>
                     <div class="col-8 col-md-8">
                         <h5 class="font-weight-bolder">John </h5>
@@ -409,7 +412,11 @@
                 </div>
 
                 <div class="d-flex bg-light p-0 col-md-6 m-0 mt-2 wow zoomIn">
-                    <div class="col-4 col-md-4 border tutors-img"><img src="assets/images/tutor1.jpg" alt="tutor 1 Kelvin">
+                    <div class="col-4 col-md-4">
+                        <figure class="tutors-img">
+                            <img src="assets/images/tutor1.jpg" alt="tutor 1 Kelvin">
+                        </figure>
+
                     </div>
                     <div class="col-8 col-md-8">
                         <h5 class="font-weight-bolder">Kelvin</h5>
@@ -423,10 +430,12 @@
             </div>
             <div class="d-md-flex m-2">
 
-
                 <div class="d-flex bg-light col-md-6 p-0 m-0 mt-2 wow zoomIn">
-                    <div class="col-4 col-md-4 border tutors-img">
-                        <img src="assets/images/tutor7.jpg" alt="tuto 2 Oliver">
+                    <div class="col-4 col-md-4">
+                        <figure class="tutors-img">
+                            <img src="assets/images/tutor7.jpg" alt="tuto 2 Oliver">
+                        </figure>
+
                     </div>
                     <div class="col-8 col-md-8">
 
@@ -441,8 +450,11 @@
 
                 <div class="d-flex p-0 bg-light col-md-6 m-0 mt-2 wow zoomIn">
 
-                    <div class="col-4 col-md-4 border tutors-img">
-                        <img src="assets/images/tutor_onez.jpg" alt="Tuto 3 Onez">
+                    <div class="col-4 col-md-4">
+                        <figure class="tutors-img">
+                            <img src="assets/images/tutor_onez.jpg" alt="Tuto 3 Onez">
+                        </figure>
+
                     </div>
                     <div class="col-8 col-md-8">
                         <h5 class="font-weight-bolder">Onez </h5>
@@ -457,7 +469,11 @@
 
             <div class="d-md-flex m-2">
                 <div class="d-flex p-0 bg-light col-md-6 m-0 mt-2 wow zoomIn">
-                    <div class="col-4 col-md-4 border tutors-img"><img src="assets/images/tutor6.jpg" alt="tutor 4 Mike"></div>
+                    <div class="col-4 col-md-4">
+                        <figure class="tutors-img">
+                            <img src="assets/images/tutor6.jpg" alt="tutor 4 Mike">
+                        </figure>
+                    </div>
                     <div class="col-8 col-md-8">
                         <h5 class="font-weight-bolder">Mike</h5>
                         <small>Admission Officer at Uchenna Tut</small>
@@ -471,7 +487,12 @@
 
                 <div class="d-flex word-wrap col-md-6 bg-light mt-2 wow zoomIn">
 
-                    <div class="col-4 col-md-4 border tutors-img"><img src="assets/images/adams.jpg" alt="tutor 5 Adams"></div>
+                    <div class="col-4 col-md-4">
+                        <figure class="tutors-img">
+                            <img src="assets/images/adams.jpg"
+                                alt="tutor 5 Adams">
+                        </figure>
+                    </div>
                     <div class="col-8 col-md-8">
                         <h5 class="font-weight-bolder">Adams</h5>
                         <small>Exams and record at Uchenna Tut</small>
